cat-deployments/catool/catool-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: catool
  labels:
    name: catool
