cat-deployments/catool/catool-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catool-deployment
  namespace: catool
  labels:
    app: catool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catool
  template:
    metadata:
      labels:
        app: catool
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
      - key: "node.kubernetes.io/disk-pressure"
        operator: "Exists"
        
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
        - name: catool
          image: 132.186.17.22:5000/catool:1-1-1-layers
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: catool-config-volume
              mountPath: /app/config/config.yaml
              subPath: config.yaml
            - name: catool-data-volume
              mountPath: /app/data
            - name: catool-logs-volume
              mountPath: /app/logs
      volumes:
        - name: catool-config-volume
          configMap:
            name: catool-config
        - name: catool-data-volume
          hostPath:
            path: /data/cat/data
            type: DirectoryOrCreate
        - name: catool-logs-volume
          hostPath:
            path: /data/cat/logs
            type: DirectoryOrCreate
