cat-deployments/catool/catool-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catool-postgres-deployment
  namespace: catool
  labels:
    app: catool-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catool-postgres
  template:
    metadata:
      labels:
        app: catool-postgres
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
      - key: "node.kubernetes.io/disk-pressure"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
        - name: catool-postgres
          image: 132.186.17.22:5000/postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: catool-postgres-volume
            - mountPath: /usr/share/zoneinfo
              name: zoneinfo-volume
      volumes:
        - name: catool-postgres-volume
          persistentVolumeClaim:
            claimName: catool-postgres-pv-claim
        - name: zoneinfo-volume
          emptyDir: {}
