cat-deployments/catool/catool-mq-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: catool-mq-nodeport-service
  namespace: catool
spec:
  type: NodePort
  selector:
    app: catool-mq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
      nodePort: 31567
