cat-deployments/catool/catool-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: catool-postgres-service
  namespace: catool
  labels:
    app: catool-postgres
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432
  selector:
    app: catool-postgres
