cat-deployments/catool/catool-service.yml
apiVersion: v1
kind: Service
metadata:
  name: catool-service
  namespace: catool
  labels:
    app: catool
spec:
  type: NodePort
  selector:
    app: catool
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30600
